Basic Features Implemented

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -188,6 +188,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
 
 [EditorStartup]
 LastLevel=/Engine/Maps/Templates/OpenWorld
@@ -1285,7 +1286,7 @@ DebuggerAttached=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=149.600
-WindowSize=X=1281.600 Y=721.600
+WindowSize=X=1286.400 Y=726.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
